--- a/index.html
+++ b/index.html
@@ -8,37 +8,30 @@
 
 </head>
 <body>
-	<h1>Nancy Huang</h1>
-	<nav class="navbar navbar-expand-sm navbar-light bg-light">
-	  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	    	<span class="navbar-toggler-icon"></span>
-	  	</button>
-	  	<div class="collapse navbar-collapse" id="navbarNav">
-	    	<ul class="navbar-nav">
-	      		<li class="nav-item">
-	        		<a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
-	      		</li>
-	      		<li class="nav-item">
-	        		<a class="nav-link" href="Xiao_Huang_CV.pdf" target="_blank">CV</a>
-	      		</li>
-	      		<li class="nav-item dropdown">
-        			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects
-        			</a>
-       				 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-         			 <a class="dropdown-item" href="Todo-List-Project/index.html" target="_blank">To-do List</a>
-         			 <a class="dropdown-item" href="color_game/color_game.html" target="_blank">Guessing Color RGB</a>
-         			 <div class="dropdown-divider"></div>
-       	  				 <a class="dropdown-item" href="#">still learning...</a>
-       				 </div>
-     			</li>
-	      		<li class="nav-item">
-	      			<a class="nav-link" href="https://www.linkedin.com/in/xiao-huang-35801024/" target="_blank"><span>LinkedIn <i class="fab fa-linkedin"></i></span></a>
-	      		</li>
-	    	</ul>
-	  	</div>
-	</nav>
+	<ul class="nav justify-content-center">
+  		<li class="nav-item">
+    		<a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+  		</li>
+  		<li class="nav-item">
+    		<a class="nav-link" href="Xiao_Huang_CV.pdf" target="_blank">CV</a>
+  		</li>
+  		<li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects
+			</a>
+				 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+ 			 <a class="dropdown-item" href="Todo-List-Project/index.html" target="_blank">To-do List</a>
+ 			 <a class="dropdown-item" href="color_game/color_game.html" target="_blank">Guessing Color RGB</a>
+ 			 <div class="dropdown-divider"></div>
+	  				 <a class="dropdown-item" href="#">still learning...</a>
+				 </div>
+			</li>
+  		<li class="nav-item">
+  			<a class="nav-link" href="https://www.linkedin.com/in/xiao-huang-35801024/" target="_blank"><span>LinkedIn <i class="fab fa-linkedin"></i></span></a>
+  		</li>
+	</ul>
 
 	<div class="main">
+		<h3>Nancy Huang</h3>
 		<p>My Name is Nancy Huang. I graduated from McGill University with Bachelor of Electrical Engineering degree. </p>
 		<p>I'm actively looking for a full-time job and interested in software developper/tester positions.</p>
 		<p>
