--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+	<h2 align="center">Nancy Huang</h2>
 	<ul class="nav justify-content-center">
   		<li class="nav-item">
     		<a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
@@ -31,7 +32,6 @@
 	</ul>
 
 	<div class="main">
-		<h3>Nancy Huang</h3>
 		<p>My Name is Nancy Huang. I graduated from McGill University with Bachelor of Electrical Engineering degree. </p>
 		<p>I'm actively looking for a full-time job and interested in software developper/tester positions.</p>
 		<p>
